# raymarching

./: .gitignore  CMakeLists.txt  flake.nix  reset.bat  run.bat
dependencies/: glfw_x11.patch
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
eng/input/: clb.cpp  clb.h  input.cpp  input.h
resources/shaders/: quad.frag  quad.vert
src/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  events.h  main.cpp  openglDebug.cpp  openglDebug.h  shaderClass.cpp  shaderClass.h  tami.cpp  tami.h
